<resources>
    <string name="app_name">LoginApplication</string>
    <string name="forget_my_password">Forget your password?</string>
    <string name="pasword">Pasword</string>
    <string name="mobile">Mobile</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_back1">خوش كەلدىڭىز</string>
    <string name="sign_in">Sign In</string>
</resources>
